--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
+      overflow-y: scroll; /* Explicitly enable vertical scrolling on body */
+      -webkit-overflow-scrolling: touch; /* For smoother scrolling on iOS */
+      padding-top: 70px; /* IMPORTANT: Add padding to body equal to header-nav's height */
     }
 
     /* Loader */
@@ -98,492 +101,47 @@
     .header-nav {
       background-color: #212121; /* Reverted to solid dark grey */
       box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
-      position: sticky;
+      position: fixed; /* CHANGED FROM STICKY TO FIXED */
       top: 0;
-      width: 100%;
-      z-index: 3;
+      left: 0; /* Ensures it starts at the very left */
+      width: 100%; /* Ensures it spans the full width */
+      z-index: 999; /* Increased z-index to ensure it's always on top */
       padding: 18px 22px;
       display: flex;
       justify-content: space-between;
       align-items: center;
       box-sizing: border-box;
-      min-height: 70px;
+      min-height: 70px; /* Maintain its height */
     }
 
-    .header-nav .logo img {
-      max-width: 110px; /* Slightly larger logo */
-      height: auto;
-      display: block;
-      padding: 0;
-      padding-top: 10;
-    }
+    /* ... rest of your CSS ... */
 
-    .header-nav .tagline {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800; /* Extra bold */
-      text-transform: uppercase;
-      color: #587F53; /* Medium dark gray */
-      font-size: 16px; /* Subtle font size */
-      margin-left: 25px; /* Space from logo */
-      white-space: nowrap; /* Prevent wrapping */
-    }
-
-    .logo-and-tagline {
-      display: flex;
-      align-items: center;
-    }
-
-    /* Menu Button Styles (Hamburger) */
-    .menu-btn {
-      display: none;
-    }
-
-    .menu-icon {
-      cursor: pointer;
-      display: none;
-      padding: 7px;
-      position: relative;
-      user-select: none;
-      z-index: 5;
-    }
-
-    .menu-icon .navicon {
-      background: #FDFDFD;
-      display: block;
-      height: 4px;
-      position: relative;
-      transition: background .4s ease-out;
-      width: 20px;
-    }
-
-    .menu-icon .navicon:before,
-    .menu-icon .navicon:after {
-      background: #FDFDFD;
-      content: '';
-      display: block;
-      height: 100%;
-      position: absolute;
-      transition: all .4s ease-out;
-      width: 100%;
-    }
-
-    .menu-icon .navicon:before {
-      top: 6px;
-    }
-
-    .menu-icon .navicon:after {
-      top: 8px;
-    }
-
-    /* Hamburger Animation */
-    .menu-btn:checked ~ .menu-icon .navicon {
-      background: transparent;
-    }
-
-    .menu-btn:checked ~ .menu-icon .navicon:before {
-      transform: rotate(-45deg);
-      top: 0;
-    }
-
-    .menu-btn:checked ~ .menu-icon .navicon:after {
-      transform: rotate(45deg);
-      top: 0;
-    }
-
-    /* Main Navigation List (Desktop) */
-    .menu {
-      margin: 0;
-      padding: 0;
-      list-style: none;
-      overflow: hidden;
-      background-color: transparent;
-      display: flex;
-      align-items: center;
-      height: auto;
-      position: relative;
-      top: auto;
-      left: auto;
-      width: auto;
-      transform: translateX(0);
-    }
-
-    .menu li a {
-      display: block;
-      padding: 18px 20px;
-      text-decoration: none;
-      color: #D5D5D5;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800; /* All bold */
-      text-transform: uppercase; /* All caps */
-      font-size: 14px; /* Larger font size */
-      transition: background-color 0.4s ease, color 0.3s ease;
-    }
-
-    .menu li a:hover {
-      background-color: #070A06;
-      color: #C2E9C1;
-    }
-
-    /* Active Page Styling */
-    .menu li a.active-page {
-      color: #C2E9C1;
-      font-weight: 800;
-    }
-
-    /* === END NAVIGATION STYLES === */
-
+    /* Adjust the header's flex property if it's no longer needed to stretch */
     header {
       text-align: center;
       padding: 20px;
-      flex: 1; /* Allows header to take available space for centering */
+      /* Remove or adjust flex: 1 if it's causing layout issues now that nav is fixed */
+      flex: 0 0 auto; /* Change to this, as the fixed nav means header doesn't need to push content down */
       display: flex;
       flex-direction: column;
-      justify-content: center; /* Centers content vertically */
-      align-items: center; /* Centers content horizontally */
-      min-height: 220px; /* Space above the page heading */
-    }
-
-    header img {
-      display: none;
-    }
-
-    h1, h2, h3, h4, h5, h6 {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      color: #B8BAB7;
-    }
-
-    h1 {
-      text-align: center;
-      font-size: 19px;
-      letter-spacing: 1px;
-      text-transform: uppercase;
-      margin-bottom: 15px;
-    }
-
-    .intro-text {
-      text-align: center;
-      max-width: 700px;
-      margin: 0 auto 20px; /* ADJUSTED: Less space below intro text */
-      font-size: 15px;
-      color: #D5D5D5;
-      line-height: 1.5;
-    }
-
-    main {
-      padding: 40px 20px;
-      max-width: 870px;
-      margin: 0 auto;
-      flex: 0 0 auto;
-      box-sizing: border-box;
-    }
-
-    .file-entry {
-      background-color: #212121;
-      border-radius: 8px;
-      padding: 20px;
-      display: flex;
-      align-items: flex-start;
-      gap: 20px;
-      flex-wrap: nowrap;
-      text-align: left;
-      border: 1px solid rgba(194, 233, 193, 0.5); /* Green stroke */
-      box-shadow: 0 0 13px rgba(194, 233, 193, 0.2); /* Subtle lighting */
-      margin-bottom: 40px; /* NEW: More space below the download block */
-    }
-
-    .file-entry img {
-      max-width: 65px;
-      height: auto;
-      border-radius: 3px;
-      flex-shrink: 0;
-      align-self: flex-start;
-    }
-
-    .file-meta {
-      flex: 1;
-    }
-
-    .file-entry a {
-        text-decoration: none;
-        color: inherit;
-    }
-
-    .file-name a {
-        color: #B8BAB7;
-    }
-
-    .file-name {
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 700;
-      margin-bottom: 10px;
-      cursor: pointer;
-    }
-    .file-name:hover {
-        color: #8CD679;
-    }
-
-
-    .buttons {
-      display: flex;
-      gap: 12px;
-      flex-wrap: nowrap;
-    }
-
-    .btn {
-      padding: 10px 18px;
-      text-decoration: none;
-      border-radius: 5px;
-      text-align: center;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 700; /* Thicker font weight for buttons */
-      white-space: nowrap;
-      transition: background-color 0.5s ease, color 0.5s ease;
-    }
-
-    a.btn.view-btn {
-      background-color: #C2E9C1;
-      color: #070A06;
-    }
-    a.btn.view-btn:hover {
-        background-color: #A0D39F;
-    }
-
-    .download-btn {
-      background-color: #456F3A;
-      color: #FDFDFD;
-    }
-    .download-btn:hover {
-        background-color: #3A5F30;
-    }
-
-
-    footer {
-      flex-shrink: 0;
-      color: #D5D5D5;
-      padding: 0;
-      font-family: 'Helvetica Neue', sans-serif;
-      overflow: hidden;
-    }
-
-    /* Styles for the main footer content area */
-    .footer-main-content {
-        background-color: #313131; /* Lighter dark grey */
-        padding: 50px 20px;
-    }
-
-    /* Styles for the very bottom copyright/links bar */
-    .footer-bottom-bar {
-        background-color: #1f1f1f; /* Darker grey/almost black */
-        padding: 27px 20px;
-        margin-top: 0px; /* Space between main footer content and this bar */
-   margin-bottom: 40px;
-    }
-    /* Media Queries for Responsiveness */
-    @media (max-width: 1280px) { /* Applies to screens smaller than 1350px */
-        body { /* Targeting the body directly as previously suggested */
-            background-image: url('bg-mobile.jpg'); /* Mobile specific background */
-            background-size: cover;
-            background-position: center top;
-            background-attachment: fixed;
-        }
-
-    /* Helper class to center content within full-width sections */
-    .content-wrapper {
-        max-width: 1280px; /* Max width for content inside footer sections */
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-    /* Moved tagline image styling */
-    .footer-tagline-moved {
-        text-align: center;
-        padding: 15px 0; /* Adjusted padding: Less space above tagline.png */
-    }
-
-    .footer-tagline-moved img {
-        width: 300px; /* Made smaller from 400px */
-        max-width: 70%; /* Adjusted for responsiveness */
-        height: auto;
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-    }
-
-
-    footer h4 {
-      font-size: 18px; /* Larger font size for all footer headings */
-      text-transform: uppercase;
-      margin-bottom: 17px;
-      font-family: 'Urbanist', sans-serif;
-      font-weight: 800;
-      text-align: left;
-    }
-
-    .footer-icons {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 22px;
-      margin-top: 18px; /* Space from heading above */
-      margin-bottom: 22px; /* Space below social icons */
-    }
-
-    .footer-icons img {
-      width: auto;
-      height: 23px;
-      opacity: 0.9;
-      transition: transform 0.4s ease;
-    }
-
-    .footer-icons img:hover {
-      transform: scale(1.2);
-    }
-
-    /* Styles for Bookstore Logos in Footer */
-    .bookstore-logos {
-      display: flex;
       justify-content: center;
       align-items: center;
-      gap: 28px;
-      margin-top: 17px; /* Space from heading above */
-      margin-bottom: 69px; /* IMPORTANT CHANGE: Increased space below bookstore logos */
-      flex-wrap: wrap;
+      min-height: 220px;
     }
 
-    .bookstore-logos a {
-      height: 30px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      flex-shrink: 0;
-      transition: transform 0.4s ease, opacity 0.3s ease;
-    }
-
-    .bookstore-logos a img {
-      max-height: 100%;
-      max-width: 100%;
-      width: auto;
-      height: auto;
-      opacity: 0.9;
-    }
-
-    .bookstore-logos a:hover {
-      transform: scale(1.1);
-      opacity: 1;
-    }
-
-
-    /* Transparent black overlay for mobile menu */
-    .mobile-menu-overlay {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100vw;
-        height: 100vh;
-        background-color: rgba(0, 0, 0, 0.6); /* Dimming overlay */
-        z-index: 2; /* Below menu (z-index 4), above header-nav (z-index 3) */
-        display: none; /* Hidden by default, shown by JS */
-        transition: background-color 0.4s ease; /* Smooth fade in/out */
-    }
-
-
-    /* Media Queries for Responsiveness */
+    /* ... rest of your media queries ... */
     @media (max-width: 600px) {
-      .file-entry {
-        flex-direction: row;
-        align-items: flex-start;
-        text-align: left;
-      }
-      .file-entry img {
-        margin-bottom: 0;
-      }
-      .buttons {
-        justify-content: flex-start;
-        flex-direction: row;
-        flex-wrap: nowrap;
-        gap: 12px;
-      }
-      .btn {
-        min-width: unset;
-        flex-grow: 0;
-        flex-basis: auto;
-      }
+        /* ... existing mobile styles ... */
 
-      /* Mobile Nav specific styles */
-      .menu-icon {
-        display: block;
-      }
-      .header-nav .logo-and-tagline {
-        justify-content: flex-start;
-        width: 100%;
-      }
-      .header-nav .tagline {
-        display: block; /* IMPORTANT CHANGE: Make tagline visible on mobile */
-        font-size: 16px; /* ADJUSTED: Slightly larger font size for mobile tagline */
-        margin-left: 16px; /* Adjust margin if needed */
-        margin-right: auto; /* Push menu icon to the right */
-      }
-
-      .menu {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 300px; /* UPDATED: Wider menu */
-        height: 100%;
-        background-color: #2f2f2f;
-        flex-direction: column;
-        justify-content: flex-start;
-        align-items: center;
-        padding-top: 80px;
-        transition: transform 0.4s ease-out;
-        transform: translateX(-100%); /* Hidden by default on mobile */
-        box-sizing: border-box;
-        z-index: 4;
-      }
-
-      /* Footer adjustments for mobile */
-      footer h4 {
-        margin-top: 0 !important; /* Ensure headings don't have default top margin from flex items */
-      }
-
-      .footer-tagline-moved img {
-        max-width: 68%; /* Adjusted for mobile view */
-      }
-
-
-      /* Ensure form items stack on mobile */
-      form {
-        flex-direction: column !important;
-        align-items: stretch !important;
-      }
-
-      form input,
-      form button {
-        width: 100%;
-        height: 50px;
-        max-width: none;
-        margin-bottom: 6px; /* Default margin for stacked elements */
-        box-sizing: border-box;
-      }
-
-
-
-      /* Mobile Styles for Bookstore Logos in Footer */
-      .bookstore-logos {
-        flex-direction: column;
-        gap: 20px;
-      }
-      .bookstore-logos a {
-        width: auto;
-        height: 65px;
-      }
-      .bookstore-logos a img {
-        width: auto;
-        height: 65px;
-      }
+        /* Adjust body padding for mobile if header height changes significantly on mobile */
+        body {
+            padding-top: 70px; /* Keep this consistent or adjust if nav height changes on mobile */
+        }
+        /* ... other mobile styles ... */
     }
-  </style>
+
+</style>
+
 </head>
 <body>
 
