--- a/index.html
+++ b/index.html
@@ -32,14 +32,6 @@
         "@type": "Organization",
         "@id": "https://files.darenprince.com/#darenprincepublishing"
       },
-      "sameAs": [
-        "https://www.goodreads.com/author/show/53671567.Daren_Prince",
-        "https://www.amazon.com/author/darenprince"
-      ]
-    },
-    "publisher": {
-      "@type": "Organization",
-      "@id": "https://files.darenprince.com/#darenprincepublishing",
       "name": "Daren Prince Publishing",
       "url": "https://www.darenprince.com",
       "logo": {
@@ -66,8 +58,6 @@
       display: flex;
       flex-direction: column;
       min-height: 100vh;
-      /* No overflow-y: scroll here, let's see if the margin is enough */
-      /* Also no -webkit-overflow-scrolling: touch here for now */
     }
 
     /* Loader */
@@ -79,6 +69,7 @@
       height: 100vh;
       background-color: #0A0A0A;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       z-index: 9999;
@@ -86,8 +77,9 @@
     }
 
     #loader img {
-      width: 280px;
+      width: 300px;
       max-width: 80%;
+      margin-bottom: 50px;
       animation: pulse 1.5s infinite ease-in-out;
     }
 
@@ -96,9 +88,87 @@
       50% { transform: scale(1.05); opacity: 0.75; }
     }
 
+    /* Styles for the Glowing Loader Ring */
+    .ring {
+      position: relative;
+      width: 200px;
+      height: 200px;
+      border: 0px solid #000;
+      border-radius: 50%;
+      text-align: center;
+      line-height: 200px;
+      font-size: 20px;
+      color: #87BD72; /* Green color for text */
+      text-shadow: 0 0 10px #87BD72; /* Green glow for text shadow */
+      /* UPDATED: Green box-shadow with transparency */
+      box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
+      overflow: hidden;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      white-space: nowrap;
+    }
+
+    .ring:before {
+      content: '';
+      position: absolute;
+      top: -3px;
+      left: -3px;
+      width: 100%;
+      height: 100%;
+      border: 3px solid transparent;
+      border-top: 3px solid #87BD72; /* Green border top */
+      border-right: 3px solid #87BD72; /* Green border right */
+      border-radius: 50%;
+      animation: animateC 2s linear infinite;
+    }
+
+    .ring span {
+      display: block;
+      position: absolute;
+      top: calc(50% - 2px);
+      left: 50%;
+      width: 50%;
+      height: 4px;
+      background: transparent;
+      transform-origin: left;
+      animation: animate 2s linear infinite;
+    }
+
+    .ring span:before {
+      content: '';
+      position: absolute;
+      top: -6px;
+      right: 0;
+      width: 16px;
+      height: 16px;
+      border-radius: 50%;
+      background: #87BD72; /* Green background for the dot */
+      box-shadow: 0 0 20px #87BD72; /* Green glow for the dot shadow */
+    }
+
+    @keyframes animateC {
+      0% {
+        transform: rotate(0deg);
+      }
+      100% {
+        transform: rotate(360deg);
+      }
+    }
+
+    @keyframes animate {
+      0% {
+        transform: rotate(45deg);
+      }
+      100% {
+        transform: rotate(405deg);
+      }
+    }
+
+
     /* === NAVIGATION STYLES === */
     .header-nav {
-      background-color: #212121; /* Reverted to solid dark grey */
+      background-color: #212121;
       box-shadow: 1px 1px 4px 0 rgba(0,0,0,.1);
       position: sticky;
       top: 0;
@@ -113,7 +183,7 @@
     }
 
     .header-nav .logo img {
-      max-width: 110px; /* Slightly larger logo */
+      max-width: 110px;
       height: auto;
       display: block;
       padding: 0;
@@ -122,12 +192,12 @@
 
     .header-nav .tagline {
       font-family: 'Urbanist', sans-serif;
-      font-weight: 800; /* Extra bold */
+      font-weight: 800;
       text-transform: uppercase;
-      color: #587F53; /* Medium dark gray */
-      font-size: 16px; /* Subtle font size */
-      margin-left: 25px; /* Space from logo */
-      white-space: nowrap; /* Prevent wrapping */
+      color: #587F53;
+      font-size: 16px;
+      margin-left: 25px;
+      white-space: nowrap;
     }
 
     .logo-and-tagline {
@@ -211,9 +281,9 @@
       text-decoration: none;
       color: #D5D5D5;
       font-family: 'Urbanist', sans-serif;
-      font-weight: 800; /* All bold */
-      text-transform: uppercase; /* All caps */
-      font-size: 14px; /* Larger font size */
+      font-weight: 800;
+      text-transform: uppercase;
+      font-size: 14px;
       transition: background-color 0.4s ease, color 0.3s ease;
     }
 
@@ -233,13 +303,12 @@
     header {
       text-align: center;
       padding: 20px;
-      flex: 1; /* Retaining original flex property for header */
+      flex: 1;
       display: flex;
       flex-direction: column;
-      justify-content: center; /* Centers content vertically */
-      align-items: center; /* Centers content horizontally */
-      min-height: 220px; /* Space above the page heading */
-      /* Removed margin-bottom: 100px from here */
+      justify-content: center;
+      align-items: center;
+      min-height: 220px;
     }
 
     header img {
@@ -263,7 +332,7 @@
     .intro-text {
       text-align: center;
       max-width: 700px;
-      margin: 0 auto 20px; /* ADJUSTED: Less space below intro text */
+      margin: 0 auto 20px;
       font-size: 15px;
       color: #D5D5D5;
       line-height: 1.5;
@@ -286,9 +355,9 @@
       gap: 20px;
       flex-wrap: nowrap;
       text-align: left;
-      border: 1px solid rgba(194, 233, 193, 0.5); /* Green stroke */
-      box-shadow: 0 0 13px rgba(194, 233, 193, 0.2); /* Subtle lighting */
-      margin-bottom: 40px; /* NEW: More space below the download block */
+      border: 1px solid rgba(194, 233, 193, 0.5);
+      box-shadow: 0 0 13px rgba(194, 233, 193, 0.2);
+      margin-bottom: 40px;
     }
 
     .file-entry img {
@@ -335,7 +404,7 @@
       border-radius: 5px;
       text-align: center;
       font-family: 'Urbanist', sans-serif;
-      font-weight: 700; /* Thicker font weight for buttons */
+      font-weight: 700;
       white-space: nowrap;
       transition: background-color 0.5s ease, color 0.5s ease;
     }
@@ -363,26 +432,26 @@
       padding: 0;
       font-family: 'Helvetica Neue', sans-serif;
       overflow: hidden;
-      margin-bottom: 100px; /* ADDED: 100 pixels of margin below the footer */
+      margin-bottom: 100px;
     }
 
     /* Styles for the main footer content area */
     .footer-main-content {
-        background-color: #313131; /* Lighter dark grey */
+        background-color: #313131;
         padding: 50px 20px;
     }
 
     /* Styles for the very bottom copyright/links bar */
     .footer-bottom-bar {
-        background-color: #1f1f1f; /* Darker grey/almost black */
+        background-color: #1f1f1f;
         padding: 27px 20px;
-        margin-top: 0px; /* Space between main footer content and this bar */
-   margin-bottom: 40px;
+        margin-top: 0px;
+        margin-bottom: 40px;
     }
     /* Media Queries for Responsiveness */
-    @media (max-width: 1280px) { /* Applies to screens smaller than 1350px */
+    @media (max-width: 1280px) {
         body {
-            background-image: url('bg-mobile.jpg'); /* Mobile specific background */
+            background-image: url('bg-mobile.jpg');
             background-size: cover;
             background-position: center top;
             background-attachment: fixed;
@@ -390,7 +459,7 @@
 
     /* Helper class to center content within full-width sections */
     .content-wrapper {
-        max-width: 1280px; /* Max width for content inside footer sections */
+        max-width: 1280px;
         margin-left: auto;
         margin-right: auto;
     }
@@ -398,12 +467,12 @@
     /* Moved tagline image styling */
     .footer-tagline-moved {
         text-align: center;
-        padding: 15px 0; /* Adjusted padding: Less space above tagline.png */
+        padding: 15px 0;
     }
 
     .footer-tagline-moved img {
-        width: 300px; /* Made smaller from 400px */
-        max-width: 70%; /* Adjusted for responsiveness */
+        width: 300px;
+        max-width: 70%;
         height: auto;
         display: block;
         margin-left: auto;
@@ -412,7 +481,7 @@
 
 
     footer h4 {
-      font-size: 18px; /* Larger font size for all footer headings */
+      font-size: 18px;
       text-transform: uppercase;
       margin-bottom: 17px;
       font-family: 'Urbanist', sans-serif;
@@ -425,8 +494,8 @@
       justify-content: center;
       flex-wrap: wrap;
       gap: 22px;
-      margin-top: 18px; /* Space from heading above */
-      margin-bottom: 22px; /* Space below social icons */
+      margin-top: 18px;
+      margin-bottom: 22px;
     }
 
     .footer-icons img {
@@ -446,8 +515,8 @@
       justify-content: center;
       align-items: center;
       gap: 28px;
-      margin-top: 17px; /* Space from heading above */
-      margin-bottom: 69px; /* IMPORTANT CHANGE: Increased space below bookstore logos */
+      margin-top: 17px;
+      margin-bottom: 69px;
       flex-wrap: wrap;
     }
 
@@ -481,10 +550,10 @@
         left: 0;
         width: 100vw;
         height: 100vh;
-        background-color: rgba(0, 0, 0, 0.6); /* Dimming overlay */
-        z-index: 2; /* Below menu (z-index 4), above header-nav (z-index 3) */
-        display: none; /* Hidden by default, shown by JS */
-        transition: background-color 0.4s ease; /* Smooth fade in/out */
+        background-color: rgba(0, 0, 0, 0.6);
+        z-index: 2;
+        display: none;
+        transition: background-color 0.4s ease;
     }
 
 
@@ -519,17 +588,17 @@
         width: 100%;
       }
       .header-nav .tagline {
-        display: block; /* IMPORTANT CHANGE: Make tagline visible on mobile */
-        font-size: 16px; /* ADJUSTED: Slightly larger font size for mobile tagline */
-        margin-left: 16px; /* Adjust margin if needed */
-        margin-right: auto; /* Push menu icon to the right */
+        display: block;
+        font-size: 16px;
+        margin-left: 16px;
+        margin-right: auto;
       }
 
       .menu {
         position: fixed;
         top: 0;
         left: 0;
-        width: 300px; /* UPDATED: Wider menu */
+        width: 300px;
         height: 100%;
         background-color: #2f2f2f;
         flex-direction: column;
@@ -537,18 +606,14 @@
         align-items: center;
         padding-top: 80px;
         transition: transform 0.4s ease-out;
-        transform: translateX(-100%); /* Hidden by default on mobile */
+        transform: translateX(-100%);
         box-sizing: border-box;
         z-index: 4;
       }
 
       /* Footer adjustments for mobile */
       footer h4 {
-        margin-top: 0 !important; /* Ensure headings don't have default top margin from flex items */
-      }
-
-      .footer-tagline-moved img {
-        max-width: 68%; /* Adjusted for mobile view */
+        margin-top: 0 !important;
       }
 
 
@@ -563,7 +628,7 @@
         width: 100%;
         height: 50px;
         max-width: none;
-        margin-bottom: 6px; /* Default margin for stacked elements */
+        margin-bottom: 6px;
         box-sizing: border-box;
       }
 
@@ -589,6 +654,10 @@
 
   <div id="loader">
     <img src="tagline.png" alt="Burn the Mask. Speak the Truth." />
+    <div class="ring">
+      Loading
+      <span></span>
+    </div>
   </div>
 
   <nav class="header-nav">
@@ -656,7 +725,7 @@
                         <li><a href="https://darenprince.com/#page-0" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Bio</a></li>
                         <li><a href="https://darenprince.com/#page-1" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Books</a></li>
                         <li><a href="https://files.darenprince.com">Press</a></li>
-                        <li><a href="mailto:contact@darenprince.com" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Contact</a></li>
+                        <li><a href="#" style="color:#D5D5D5; font-weight: bold; text-decoration: none;">Downloads</a></li> <li><a href="mailto:contact@darenprince.com" style="color: #D5D5D5; font-weight: bold; text-decoration: none;">Contact</a></li>
                     </ul>
                 </div>
 
@@ -673,12 +742,12 @@
                           name="email"
                           placeholder="Email address"
                           aria-label="Your email address"
-                          style="padding: 12px; flex: 1 1 auto; border: none; border-radius: 4px; background-color: #2A2A2A; color: #FDFDFD;" /* TALLER FIELD */
+                          style="padding: 12px; flex: 1 1 auto; border: none; border-radius: 4px; background-color: #2A2A2A; color: #FDFDFD;"
                           required
                         />
                         <button
                           type="submit"
-                          style="padding: 12px 16px; background-color: #456F3A; border: none; color: white; border-radius: 4px; white-space: nowrap; margin-top: 6px;" /* TALLER BUTTON & MORE PADDING ABOVE */
+                          style="padding: 12px 16px; background-color: #456F3A; border: none; color: white; border-radius: 4px; white-space: nowrap; margin-top: 6px;"
                         >
                           Join →
                         </button>
@@ -731,56 +800,77 @@
                     <a href="#" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Compliance</a>
                     |
                     <a href="mailto:contact@darenprince.com" style="color:#87BD72; text-decoration:none; margin: 0 8px;">Contact</a>
-                </p> </p> </p>
+                </p>
             </div>
         </div> </div> </footer>
 
   <script>
-    window.addEventListener('load', () => {
+    document.addEventListener("DOMContentLoaded", function() {
       const loader = document.getElementById('loader');
-      loader.style.opacity = 0;
-      setTimeout(() => loader.style.display = 'none', 800);
-    });
 
-    // NEW: JavaScript for the menu and overlay
-    document.addEventListener('DOMContentLoaded', () => {
-        const menuBtn = document.getElementById('menu-btn');
-        const body = document.body;
-        const menu = document.querySelector('.menu'); // Select the menu itself
-        const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+      // Define the minimum display time in milliseconds (2 seconds)
+      const minimumDisplayTime = 2000;
 
-        menuBtn.addEventListener('change', function() {
-            if (this.checked) {
-                body.classList.add('menu-open');
-                menu.style.transform = 'translateX(0)'; // Show menu
-                mobileMenuOverlay.style.display = 'block'; // Show overlay
-            } else {
-                body.classList.remove('menu');
-                menu.style.transform = 'translateX(-100%)'; // Hide menu
-                mobileMenuOverlay.style.display = 'none'; // Hide overlay
-            }
-        });
+      // Record when the page content is fully loaded
+      const loadStartTime = Date.now();
 
-        // Close menu/overlay if overlay is clicked (optional but good UX)
-        mobileMenuOverlay.addEventListener('click', () => {
-            menuBtn.checked = false; // Uncheck the menu button
-            body.classList.remove('menu-open');
-            menu.style.transform = 'translateX(-100%)';
-            mobileMenuOverlay.style.display = 'none';
-        });
+      // Function to hide the loading screen
+      function hideLoadingScreen() {
+        loader.style.opacity = 0; // Start fade out
+        setTimeout(() => {
+          loader.style.display = 'none'; // Hide after fade out
+        }, 1000); // This should match the CSS transition duration for opacity (1.0s = 1000ms)
+      }
 
-        // Hide menu and overlay on wider screens if it was open on mobile
-        window.addEventListener('resize', () => {
-            if (window.innerWidth > 600) { // Your mobile breakpoint
-                menuBtn.checked = false;
-                body.classList.remove('menu-open');
-                menu.style.transform = 'translateX(0)'; // Reset menu position for desktop
-                mobileMenuOverlay.style.display = 'none';
-            }
-        });
+      // Check if the minimum display time has passed when content is loaded
+      window.addEventListener('load', () => {
+        const timeElapsed = Date.now() - loadStartTime;
+        if (timeElapsed < minimumDisplayTime) {
+          // If not enough time has passed, wait the remaining time
+          setTimeout(hideLoadingScreen, minimumDisplayTime - timeElapsed);
+        } else {
+          // If enough time has passed, hide immediately
+          hideLoadingScreen();
+        }
+      });
+
+      // NEW: JavaScript for the menu and overlay
+      const menuBtn = document.getElementById('menu-btn');
+      const body = document.body;
+      const menu = document.querySelector('.menu'); // Select the menu itself
+      const mobileMenuOverlay = document.querySelector('.mobile-menu-overlay');
+
+      menuBtn.addEventListener('change', function() {
+          if (this.checked) {
+              body.classList.add('menu-open');
+              menu.style.transform = 'translateX(0)'; // Show menu
+              mobileMenuOverlay.style.display = 'block'; // Show overlay
+          } else {
+              body.classList.remove('menu');
+              menu.style.transform = 'translateX(-100%)'; // Hide menu
+              mobileMenuOverlay.style.display = 'none'; // Hide overlay
+          }
+      });
+
+      // Close menu/overlay if overlay is clicked (optional but good UX)
+      mobileMenuOverlay.addEventListener('click', () => {
+          menuBtn.checked = false; // Uncheck the menu button
+          body.classList.remove('menu-open');
+          menu.style.transform = 'translateX(-100%)';
+          mobileMenuOverlay.style.display = 'none';
+      });
+
+      // Hide menu and overlay on wider screens if it was open on mobile
+      window.addEventListener('resize', () => {
+          if (window.innerWidth > 600) { // Your mobile breakpoint
+              menuBtn.checked = false;
+              body.classList.remove('menu-open');
+              menu.style.transform = 'translateX(0)'; // Reset menu position for desktop
+              mobileMenuOverlay.style.display = 'none';
+          }
+      });
     });
   </script>
 
 </body>
 </html>
-m
