--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
     #loader img {
       width: 300px;
       max-width: 80%;
-      margin-bottom: 0;
+      /* Removed margin-top: 50px as the ring's margin-bottom will handle spacing from the ring */
+      margin-bottom: 0; /* Ensures no extra space below the logo image itself */
       animation: pulse 1.5s infinite ease-in-out;
     }
 
@@ -91,36 +92,35 @@
     /* Styles for the Glowing Loader Ring */
     .ring {
       position: relative;
-      width: 112px;
-      height: 112px;
+      width: 112px; /* UPDATED: Increased size to contain the 6px border (100 + 2*6) */
+      height: 112px; /* UPDATED: Increased size to contain the 6px border (100 + 2*6) */
       border: 0px solid #000;
       border-radius: 50%;
       text-align: center;
-      line-height: 112px;
-      font-size: 11px;
+      line-height: 112px; /* UPDATED: Aligned with new height */
+      font-size: 11px; /* UPDATED: Slightly increased font size */
       color: #87BD72;
       text-shadow: 0 0 10px #87BD72;
       box-shadow: 0 0 20px rgba(135, 189, 114, 0.5);
-      overflow: hidden;
+      overflow: hidden; /* Kept to ensure content inside stays within bounds if needed */
       display: flex;
       align-items: center;
       justify-content: center;
       white-space: nowrap;
-      order: -1;
-      margin-bottom: 50px;
+      order: -1; /* Ensures ring appears above the image in flex column */
+      margin-bottom: 50px; /* UPDATED: Space between ring and logo */
     }
 
     .ring:before {
       content: '';
       position: absolute;
-      top: -6px;
-      left: -6px;
+      top: -6px; /* UPDATED: Adjusted to match new border thickness */
+      left: -6px; /* UPDATED: Adjusted to match new border thickness */
       width: 100%;
       height: 100%;
-      /* UPDATED: Base border for full circle, plus animating top/right sections */
-      border: 6px solid rgba(135, 189, 114, 0.2); /* Subtle base circle outline */
-      border-top: 6px solid #87BD72; /* Bright green rotating part */
-      border-right: 6px solid #87BD72; /* Bright green rotating part */
+      border: 6px solid transparent; /* Thicker border */
+      border-top: 6px solid #87BD72; /* Thicker border */
+      border-right: 6px solid #87BD72; /* Thicker border */
       border-radius: 50%;
       animation: animateC 2s linear infinite;
     }
@@ -176,20 +176,20 @@
       top: 0;
       width: 100%;
       z-index: 3;
-      padding: 18px 22px; /* Kept original padding */
+      padding: 18px 22px;
       display: flex;
       justify-content: space-between;
-      align-items: flex-start; /* Aligns content to the top */
+      align-items: center;
       box-sizing: border-box;
-      min-height: auto; /* UPDATED: Removed min-height to allow padding to dictate height */
+      min-height: 70px;
     }
 
     .header-nav .logo img {
-      max-width: 110px; /* Original size */
+      max-width: 125px; /* UPDATED: Slightly larger logo */
       height: auto;
       display: block;
       padding: 0;
-      margin-top: 0;
+      margin-top: 0; /* Ensures no unexpected top margin */
     }
 
     .header-nav .tagline {
@@ -204,8 +204,8 @@
 
     .logo-and-tagline {
       display: flex;
-      align-items: flex-start; /* Aligns content to the top */
-      padding-top: 0;
+      align-items: center;
+      padding-top: 0; /* Ensures no unexpected padding here */
     }
 
     /* Menu Button Styles (Hamburger) */
@@ -215,7 +215,7 @@
 
     .menu-icon {
       cursor: pointer;
-      display: block;
+      display: none;
     }
 
     .menu-icon .navicon {
@@ -239,11 +239,11 @@
     }
 
     .menu-icon .navicon:before {
-      top: -6px; /* Corrected position for top bar */
+      top: 6px;
     }
 
     .menu-icon .navicon:after {
-      top: 6px; /* Corrected position for bottom bar */
+      top: 8px;
     }
 
     /* Hamburger Animation */
